page confirm appointment

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
     "react/prop-types": "off",
     "no-unused-expressions": "off",
     "react/jsx-props-no-spreading": "off",
